# GoodNet

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  VISION.md  docker-compose.ice.yml  docker-compose.yml  flake.nix  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
apps/store/: backend.hpp  handler.cpp  handler.hpp  main.cpp  sqlite_backend.cpp  sqlite_backend.hpp  store_app.cpp  store_app.hpp
ci/: docker-test.sh
cli/: bench.cpp  bench.hpp  dashboard.hpp  server.cpp  server.hpp
cmake/: GoodNetConfig.cmake.in  pch.cmake
core/: cm_auth.cpp  cm_capi.cpp  cm_dispatch.cpp  cm_handshake.cpp  cm_identity.cpp  cm_impl.hpp  cm_lifecycle.cpp  cm_query.cpp  cm_relay.cpp  cm_send.cpp  cm_session.cpp  cm_transport.cpp  connectManager.cpp  connectManager.hpp  connectionManager.cpp  connectionManager.hpp  homeServices.cpp  homeServices.hpp  noise.cpp  noise.hpp  pluginManager.cpp  pluginManager.hpp  pluginManager_core.cpp  pluginManager_lookup.cpp  pluginManager_query.cpp  pluginManager_state.cpp  pm_impl.hpp  route_table.hpp  system_services.hpp  util.cpp  util.hpp
core/cm/: connectionManager.hpp  disconnect.cpp  dispatch.cpp  handshake.cpp  identity.cpp  impl.hpp  lifecycle.cpp  queries.cpp  registration.cpp  relay.cpp  transport.cpp
core/crypto/: machine_id.cpp  machine_id.hpp  noise.cpp  noise.hpp
core/data/: machine_id.cpp  machine_id.hpp  messages.hpp
core/pm/: core.cpp  impl.hpp  pluginManager.hpp  query.cpp
core/types/: connection.hpp  identify.hpp  nonce_window.hpp  pending.hpp  plugin.hpp
docs/: 01-overview.md  02-build.md  03-core-api.md  04-plugins.md  05-system-messages.md  06-usage-patterns.md  07-architecture.md  08-protocol.md  09-security.md  10-config.md  11-testing.md  12-roadmap.md  README.md  architecture.md  build.md  config.md  faq.md  index.md  logging.md  plugins.md  quickstart.md  roadmap.md
docs/architecture/: connection-manager.md  plugin-system.md  signal-bus.md
docs/diagrams/: connection-fsm.md  noise-fsm.md  packet-flow.md
docs/en/: 01-overview.md  02-architecture.md  03-protocol.md  04-crypto.md  05-connection-manager.md  06-signal-bus.md  07-plugin-manager.md  08-identity.md  09-logger.md  10-config.md  11-sdk-c.md  12-sdk-cpp.md  13-build.md  14-testing.md  15-security.md  16-roadmap.md  README.md  api_reference.md  architecture.md  build_system.md  connection_manager.md  logging.md  plugins_development.md  testing.md
docs/guides/: best-practices.md  concepts.md  connector-guide.md  handler-guide.md
docs/protocol/: crypto.md  noise-handshake.md  wire-format.md
docs/recipes/: build-tips.md  config-recipes.md  identity-migration.md
docs/ru/: 01-overview.md  02-architecture.md  03-protocol.md  04-crypto.md  05-connection-manager.md  06-signal-bus.md  07-plugin-manager.md  08-identity.md  09-logger.md  10-config.md  11-sdk-c.md  12-sdk-cpp.md  13-build.md  14-testing.md  15-security.md  16-roadmap.md  17-core-api.md  README.md  api_reference.md  architecture.md  build_system.md  connection_manager.md  logging.md  plugins_development.md  testing.md
include/: config.hpp  core.h  core.hpp  dynlib.hpp  fmt_extensions.hpp  logger.hpp  signals.hpp  stats.hpp  version.hpp
nix/: buildPlugin.nix  mkCppPlugin.nix  registry.nix
plugins/: helper.cmake
plugins/connectors/: CMakeLists.txt  tcp.cpp
plugins/connectors/ice/: CMakeLists.txt  candidate.hpp  default.nix  ice.cpp  session.cpp  session.hpp  stun.cpp  stun.hpp
plugins/connectors/tcp/: CMakeLists.txt  default.nix  tcp.cpp
plugins/connectors/template/: CMakeLists.txt  template_connector.cpp
plugins/handlers/: CMakeLists.txt  logger.cpp
plugins/handlers/logger/: CMakeLists.txt  default.nix  logger.cpp
plugins/handlers/template/: CMakeLists.txt  template_handler.cpp
sdk/: connector.h  handler.h  helper.cmake  plugin.h  static_registry.hpp  types.h
sdk/cpp/: connector.hpp  data.hpp  handler.hpp  plugin.hpp
src/: capi.cpp  config.cpp  core.cpp  logger.cpp  main.cpp  signals.cpp
tests/: conf.cpp  connection_manager.cpp  core.cpp  heartbeat.cpp  logger.cpp  mock_connector.cpp  mock_handler.cpp  plugins.cpp  queue_stress.cpp  signals.cpp  test_helpers.hpp
